# auctionwatcher

./: auctions.db  flake.nix  mail.html  main.py  pyproject.toml  scrapy.cfg
auctionwatcher/: items.py  main.py  middlewares.py  pipelines.py  settings.py
auctionwatcher/spiders/: auction.py
auctionwatcher/templates/: mail.html
